Mid-update codebase fix
Took 26 minutes